# 2026_NEXTLAB_numerica

./: .gitignore  CMakeLists.txt  README.md
src/: bubble.c  bubble.h  constants.h  game.c  game.h  main.c  save.c  save.h  screen.h  ui.c  ui.h
